# rust-ctrlc

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  README.md  appveyor.yml
.github/workflows/: ci.yml
examples/: async_example.rs  channel_example.rs  counter_example.rs  issue_46_example.rs  multiple_signals_example.rs  readme_example.rs  simple.rs
src/: block_outcome.rs  channel.rs  counter.rs  error.rs  helper.rs  lib.rs  signal.rs  signalevent.rs  signalmap.rs  tests.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/platform/channel/: mod.rs  unix.rs  windows.rs
src/platform/counter/: mod.rs  unix.rs  windows.rs
src/platform/other/: mod.rs
src/platform/unix/: counter.rs  mod.rs
src/platform/unix/pipe/: mod.rs
src/platform/unix/semaphore/: mod.rs
src/platform/windows/: mod.rs
tests/main/: deinit.rs  harness.rs  issue_97.rs  mod.rs  mod_scoped.rs
