[package]
name = "ctrlc"
version = "3.2.3"
authors = ["Antti Keränen <detegr@gmail.com>"]
description = "Easy Ctrl-C handler for Rust projects"
documentation = "http://detegr.github.io/doc/ctrlc"
homepage = "https://github.com/Detegr/rust-ctrlc"
keywords = ["ctrlc", "signal", "SIGINT"]
categories = ["os"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Detegr/rust-ctrlc.git"
exclude = ["/.travis.yml", "/appveyor.yml"]
edition = "2018"
readme = "README.md"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", default-features = false, features = ["fs", "signal"]}

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.42", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_System_WindowsProgramming", "Win32_System_Console"] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.42", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_System_SystemServices", "Win32_System_Console"] }

[features]
termination = []

[[test]]
harness = false
name = "tests"
path = "src/tests.rs"
